- Implementada clase Partido para la gestión de eventos - Añadida funcionalidad para la creación de eventos a través de un Dialog - Creada actividad para visualizar eventos publicados (actualmente solo muestra el id del evento) - Implementado el JavaDoc de las clases principales de la aplicación - Finalizado los tests de los métodos de la clase Database

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:backgroundTint="@color/background"
-    tools:context=".LogInActivity">
+    tools:context=".ui.activities.LogInActivity">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/v_loginguideline01"
