Añadidas nuevas traducciones y limpieza de código

--- a/app/src/main/res/layout/activity_first_login.xml
+++ b/app/src/main/res/layout/activity_first_login.xml
@@ -54,7 +54,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Por favor, complete su perfil:"
+        android:text="@string/complete_profile"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/v_slide1guideline02"
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:hint="Nombre"
+        android:hint="@string/name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toStartOf="@+id/v_slide1guideline02"
         app:layout_constraintStart_toStartOf="@+id/v_slide1guideline01"
@@ -79,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Apellidos"
+        android:hint="@string/surname"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toStartOf="@+id/v_slide1guideline02"
         app:layout_constraintStart_toStartOf="@+id/v_slide1guideline01"
@@ -91,7 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Edad"
+        android:hint="@string/age"
         android:inputType="number"
         app:layout_constraintEnd_toStartOf="@+id/v_slide1guideline02"
         app:layout_constraintStart_toStartOf="@+id/v_slide1guideline01"
@@ -102,7 +102,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
-        android:text="Completar Perfil"
+        android:text="@string/complete_profile_button"
         app:layout_constraintEnd_toStartOf="@+id/v_slide1guideline02"
         app:layout_constraintStart_toStartOf="@+id/v_slide1guideline01"
         app:layout_constraintTop_toBottomOf="@+id/edadEditText" />
