--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -146,4 +146,16 @@
         app:layout_constraintStart_toStartOf="@+id/v_loginguideline03"
         app:layout_constraintTop_toTopOf="@+id/h_loginguideline05" />
 
+    <TextView
+        android:id="@+id/textView_userpassincorrect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/user_pass_error"
+        android:textColor="#FB1100"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toStartOf="@+id/v_loginguideline04"
+        app:layout_constraintStart_toStartOf="@+id/v_loginguideline03"
+        app:layout_constraintTop_toBottomOf="@+id/login_button1" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
