--- a/app/src/main/res/layout/row_matches.xml
+++ b/app/src/main/res/layout/row_matches.xml
@@ -13,6 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="80dp">
 
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="30dp"
+            android:layout_height="32dp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_done_24px" />
+
         <TextView
             android:id="@+id/datetime_textview"
             android:layout_width="wrap_content"
@@ -37,8 +46,8 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="26dp"
+            android:layout_height="42dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/divider"
             app:layout_constraintHorizontal_bias="0.0"
@@ -51,12 +60,13 @@
             android:id="@+id/textView5"
             android:layout_width="77dp"
             android:layout_height="27dp"
-            android:layout_marginStart="64dp"
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:password="false"
             android:text="EQUIPO 1"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/textView6"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/divider"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -64,23 +74,25 @@
             android:id="@+id/textView6"
             android:layout_width="77dp"
             android:layout_height="27dp"
-            android:layout_marginStart="200dp"
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:password="false"
             android:text="EQUIPO 2"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/divider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/textView5"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="77dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="64dp"
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:textColor="#4caf50"
+            app:layout_constraintEnd_toStartOf="@+id/textView8"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/divider"
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -88,11 +100,12 @@
             android:id="@+id/textView8"
             android:layout_width="77dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="200dp"
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:textColor="#4caf50"
-            app:layout_constraintStart_toEndOf="@+id/divider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/textView7"
             app:layout_constraintTop_toBottomOf="@+id/textView6" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
