--- a/app/src/main/res/layout/fragment_football.xml
+++ b/app/src/main/res/layout/fragment_football.xml
@@ -29,7 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="19dp"
             android:layout_marginTop="96dp"
-            android:text="Número jugadores por equipo:"
+            android:text="@string/player_number_team"
             android:textAlignment="textStart"
             app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
             app:layout_constraintHorizontal_bias="0.5"
@@ -43,7 +43,7 @@
             android:layout_marginTop="32dp"
             android:clickable="true"
             android:focusable="false"
-            android:hint="Fecha"
+            android:hint="@string/date"
             android:inputType="date"
             android:maxLines="1"
             android:textColorHint="@color/background"
@@ -58,7 +58,7 @@
             android:layout_marginTop="32dp"
             android:clickable="true"
             android:focusable="false"
-            android:hint="Hora"
+            android:hint="@string/time"
             android:inputType="date"
             android:maxLines="1"
             android:textColorHint="@color/background"
