--- a/app/src/main/res/layout/fragment_tennis.xml
+++ b/app/src/main/res/layout/fragment_tennis.xml
@@ -16,7 +16,7 @@
             android:layout_width="0dp"
             android:layout_height="19dp"
             android:layout_marginTop="96dp"
-            android:text="Número jugadores:"
+            android:text="@string/players_number"
             android:textAlignment="textStart"
             app:layout_constraintEnd_toStartOf="@+id/radioGroupJugadores"
             app:layout_constraintHorizontal_bias="0.5"
@@ -28,7 +28,7 @@
             android:layout_width="0dp"
             android:layout_height="19dp"
             android:layout_marginTop="80dp"
-            android:text="Número de sets:"
+            android:text="@string/set_number"
             android:textAlignment="textStart"
             app:layout_constraintEnd_toStartOf="@+id/radioGroupSets"
             app:layout_constraintHorizontal_bias="0.5"
@@ -42,7 +42,7 @@
             android:layout_marginTop="168dp"
             android:clickable="true"
             android:focusable="false"
-            android:hint="Fecha"
+            android:hint="@string/date"
             android:inputType="date"
             android:maxLines="1"
             android:textColorHint="@color/background"
@@ -58,7 +58,7 @@
             android:layout_marginTop="12dp"
             android:clickable="true"
             android:focusable="false"
-            android:hint="Hora"
+            android:hint="@string/time"
             android:inputType="date"
             android:maxLines="1"
             android:textColorHint="@color/background"
@@ -75,30 +75,6 @@
             app:layout_constraintGuide_percent="0.04" />
 
         <RadioGroup
-            android:id="@+id/radioGroupSets"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="70dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/radioGroupJugadores">
-
-            <RadioButton
-                android:id="@+id/radioButtonMejor3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Mejor de 3" />
-
-            <RadioButton
-                android:id="@+id/radioButtonMejor5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Mejor de 5" />
-        </RadioGroup>
-
-        <RadioGroup
             android:id="@+id/radioGroupJugadores"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -113,14 +89,39 @@
                 android:id="@+id/radioButtonIndividual"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Individual" />
+                android:text="@string/individual" />
 
             <RadioButton
                 android:id="@+id/radioButtonDobles"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Dobles" />
+                android:text="@string/couples" />
         </RadioGroup>
+
+        <RadioGroup
+            android:id="@+id/radioGroupSets"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="70dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/radioGroupJugadores">
+
+            <RadioButton
+                android:id="@+id/radioButtonMejor3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/best_of_3" />
+
+            <RadioButton
+                android:id="@+id/radioButtonMejor5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/best_of_5" />
+        </RadioGroup>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
