--- a/app/src/main/res/layout/layout_page_activity_matches_main.xml
+++ b/app/src/main/res/layout/layout_page_activity_matches_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No hay partidos disponibles"
+        android:text="@string/no_matches_available"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
