--- a/app/src/main/res/layout/row_matches.xml
+++ b/app/src/main/res/layout/row_matches.xml
@@ -63,7 +63,7 @@
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:password="false"
-            android:text="EQUIPO 1"
+            android:text="@string/team_1"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/textView6"
             app:layout_constraintHorizontal_bias="0.5"
@@ -77,7 +77,7 @@
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:password="false"
-            android:text="EQUIPO 2"
+            android:text="@string/team_2"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
